<resources>
    <string name="app_name">LingoLearn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_purchase">Purchase</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_vocabulary">Vocabulary</string>

    <string name="splash_screen_info">Designed By: \n Khai Wen, Kok Wei</string>
    <string name="register_page_password_hint"> Password \t\t\t\t (Hint: abcD@12345)</string>
    <string name="inquiries">For any inquiry, please call +6011-21772618 to our customer services.Or you can email to us support@lingolearn.com</string>
    <string name="quiz_rad_english">English</string>
    <string name="quiz_rad_chinese">中文/Chinese</string>
    <string name="quiz_btn_next">Next</string>
    <string name="quiz_select_txt">Select your language:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_submit_btn">Submit</string>
    <string name="quiz_question_image_desc">Question Image</string>
    <string name="quiz_return_button">Return</string>
    <string name="quiz_retry_button">Retry</string>

    <string name="about_us_title1">Our Team</string>
    <string name="about_us_title2">Our App</string>
    <string name="about_us_title3">Contact</string>
    <string name="about_us_back"><![CDATA[<]]></string>
    <string name="about_us_forward"><![CDATA[>]]></string>
    <string name="about_us_team">With the help of the APP LingoLearn, those who desire to learn English and Chinese can fast advance in their language skills.\n\n  YEW KOK WEI(Leader) \n \t\t *Expertise: Director CEO \n \t\t *Email: yewkw@gmail.com \n\n TEH KHAI WEN \n \t\t *Expertise: Director COO \n \t\t *Email: khaiwenteh@gmail.com \n\nOur team, which included TARUMT students YEW KOK WEI (Leader) and TEH KHAI WEN, created this app for the MAD (Mobile App) topic.</string>
    <string name="about_us_company">Our Company :\n\nLingoLearn is a company that helps improve Quality Education. Our app is currently working on several modules that allow people to quickly improve their language skills. We also sell some stationery that can be used by everyone when there is no cell phone state.</string>
    <string name="about_us_contact">Have Questions ?\n\nFeel free to email or call us any weekdays between 10am to 6pm\n\n Email :\nsupport@lingolearn.com\n\n Phone Number:\n6011-21772618</string>
    <string name="payment_e_wallet">E-Wallet</string>
    <string name="payment_online_banking">Online Banking</string>

    <string name="welcome">Welcome to LingoLearn App</string>
    <string name="card1text2">Happy Learning ,Easy Integration! \n\nPlay-based learning helps kids acquire information more quickly.</string>
    <string name="card2text2">Learning English can be incredibly frustrating, but LingoLearn makes it lot simpler, more enjoyable, and easier to remember.</string>
    <string name="card3text2">在现代，中文对我们来说一个重要的语言，但是学习中文是个辛苦的事情。不过遇到了 LingoLearn，不但很快乐的学习，还可以更快速吸收。</string>
</resources>