<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutus.AboutUsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/about_us_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/about_us_title1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/about_us_btn_forward"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toEndOf="@+id/about_us_btn_back"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/about_us_btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:text="@string/about_us_back"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:backgroundTint="@color/material_dynamic_primary70"
            app:layout_constraintBottom_toBottomOf="@id/about_us_title_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/about_us_title_txt"
            app:layout_constraintVertical_bias="0.47" />

        <Button
            android:id="@+id/about_us_btn_forward"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="40dp"
            android:text="@string/about_us_forward"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:backgroundTint="@color/material_dynamic_primary70"
            app:layout_constraintBottom_toBottomOf="@+id/about_us_title_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/about_us_title_txt" />

        <TextView
            android:id="@+id/about_us_content_txt"
            android:layout_width="358dp"
            android:layout_height="456dp"
            android:layout_marginTop="40dp"
            android:background="#B9FFFCFC"
            android:backgroundTint="#FFFFFF"
            android:drawableTint="#090909"
            android:fontFamily="sans-serif"
            android:text="@string/about_us_team"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/about_us_title_txt"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/about_us_title_txt"
            app:layout_constraintTop_toBottomOf="@+id/about_us_title_txt" />

        <ImageView
            android:id="@+id/about_us_logo"
            android:layout_width="107dp"
            android:layout_height="105dp"
            android:layout_marginTop="28dp"
            android:width="2dp"
            android:contentDescription="Logo"
            android:src="@drawable/lingonback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/about_us_call_btn"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toEndOf="@+id/about_us_email_btn"
            app:layout_constraintTop_toBottomOf="@+id/about_us_content_txt"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/about_us_email_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:text="Email"
            android:textSize="16sp"
            android:visibility="invisible"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="@+id/about_us_logo"
            app:layout_constraintStart_toStartOf="@+id/about_us_content_txt"
            app:layout_constraintTop_toTopOf="@+id/about_us_logo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/about_us_call_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:text="Call"
            android:textSize="16sp"
            android:visibility="invisible"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="@+id/about_us_logo"
            app:layout_constraintEnd_toEndOf="@+id/about_us_content_txt"
            app:layout_constraintTop_toTopOf="@+id/about_us_logo"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>