<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|right"
    android:background="@drawable/background"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="285dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/welcome"
        android:textAlignment="viewStart"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_first"
        android:layout_width="367dp"
        android:layout_height="171dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home">


        <TextView
            android:id="@+id/home_card_first_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Beneficial education"
            android:textColor="#322C3C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/home_card_first_img"
            android:layout_width="140dp"
            android:layout_height="137dp"
            android:layout_gravity="right"
            android:background="#2FFFFFFF"
            app:srcCompat="@drawable/education" />

        <TextView
            android:id="@+id/home_card_first_txt2"
            android:layout_width="227dp"
            android:layout_height="120dp"
            android:layout_gravity="center|left"
            android:text="@string/card1text2"
            android:textColor="#3F51B5"
            android:textSize="16sp" />

        <Button
            android:id="@+id/card_first_btn"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:layout_gravity="bottom|center|right"
            android:background="@drawable/round_btn"
            android:backgroundTint="@color/green_500"
            android:text="Learn more"
            android:textColor="#FDFDFD"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_second"
        android:layout_width="367dp"
        android:layout_height="171dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_first">

        <TextView
            android:id="@+id/home_card_second_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Learn English"
            android:textColor="#322C3C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/home_card_second_img"
            android:layout_width="143dp"
            android:layout_height="137dp"
            android:layout_gravity="right"
            android:background="#2FFFFFFF"
            app:srcCompat="@drawable/english_home" />

        <TextView
            android:id="@+id/home_card_second_txt2"
            android:layout_width="217dp"
            android:layout_height="139dp"
            android:layout_gravity="bottom|center|left"
            android:text="@string/card2text2"
            android:textColor="#3F51B5"
            android:textSize="16sp" />

        <Button
            android:id="@+id/card_second_btn"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:layout_gravity="bottom|center|right"
            android:background="@drawable/round_btn"
            android:backgroundTint="@color/green_500"
            android:text="Learn more"
            android:textColor="#FDFDFD"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_third"
        android:layout_width="367dp"
        android:layout_height="171dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_second">

        <TextView
            android:id="@+id/home_card_third_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="学习中文"
            android:textColor="#322C3C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/home_card_third_img"
            android:layout_width="139dp"
            android:layout_height="133dp"
            android:layout_gravity="right"
            android:background="#2FFFFFFF"
            app:srcCompat="@drawable/learn_chinese" />

        <TextView
            android:id="@+id/home_card_third_txt2"
            android:layout_width="247dp"
            android:layout_height="137dp"
            android:layout_gravity="bottom|center|left"
            android:text="@string/card3text2"
            android:textColor="#3F51B5"
            android:textSize="16sp" />

        <Button
            android:id="@+id/card_third_btn"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:layout_gravity="bottom|center|right"
            android:background="@drawable/round_btn"
            android:backgroundTint="@color/green_500"
            android:text="Learn more"
            android:textColor="#FDFDFD"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>